--- a/setup.cfg
+++ b/setup.cfg
@@ -4,4 +4,8 @@
 # will need to generate wheels for each Python version that you support.
 #universal=1
 
+[aliases]
+test=pytest
 
+[tool:pytest]
+python_files = tests/*_test.py
