--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
  - "pip install -r requirements.txt"
  - "pip install coveralls"
 script: 
- - coverage run setup.py test --source src
+ - coverage run --source src setup.py test
 after_success:
  - coveralls
 
